feat: Configurar Supabase PostgreSQL com pooler, direct URL e rota de teste - Sistema pronto para produÃ§Ã£o

--- a/env.example
+++ b/env.example
@@ -4,15 +4,40 @@
 # ============================================
 
 # ============================================
-# DATABASE
+# DATABASE - SUPABASE POSTGRESQL
 # ============================================
-DATABASE_URL="file:./dev.db"
+
+# Pooler (Runtime - usa em queries normais do Prisma)
+# Formato: postgresql://postgres.PROJECT_REF:SENHA@HOST:6543/postgres?pgbouncer=true&connection_limit=1
+DATABASE_URL="postgresql://postgres.qtcwetabhhkhvomcrqgm:SENHA_AQUI@aws-0-sa-east-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1"
+
+# Direta (Migrações - usa apenas em prisma migrate)
+# Formato: postgresql://postgres:SENHA@HOST:5432/postgres?sslmode=require
+DIRECT_URL="postgresql://postgres:SENHA_AQUI@db.qtcwetabhhkhvomcrqgm.supabase.co:5432/postgres?sslmode=require"
+
+# IMPORTANTE: Se a senha tiver caracteres especiais, use URL encoding:
+# # → %23
+# @ → %40
+# : → %3A
+# / → %2F
+# ? → %3F
+# & → %26
+# = → %3D
+# espaço → %20
 
 # ============================================
-# NEXTAUTH (Autenticação - Futuro)
+# SUPABASE
+# ============================================
+# Obter em: Supabase Dashboard → Settings → API
+NEXT_PUBLIC_SUPABASE_URL="https://qtcwetabhhkhvomcrqgm.supabase.co"
+NEXT_PUBLIC_SUPABASE_ANON_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+
+# ============================================
+# NEXTAUTH (Autenticação)
 # ============================================
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="sua_secret_key_aqui_minimo_32_caracteres"
+# Gerar com: openssl rand -base64 32
 
 # ============================================
 # APIs IMPLEMENTADAS (CRÍTICAS)
