--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && prisma db push --accept-data-loss && next build",
-    "build:migrate": "prisma generate && prisma migrate deploy && next build",
+    "build": "node scripts/build.js",
     "start": "next start",
     "lint": "next lint",
     "db:generate": "prisma generate",
