fix: Adicionar directUrl ao schema.prisma - CRITICO para usar porta 5432 em migracoes

--- a/env.example
+++ b/env.example
@@ -9,11 +9,11 @@
 
 # Pooler (Runtime - usa em queries normais do Prisma)
 # Formato: postgresql://postgres.PROJECT_REF:SENHA@HOST:6543/postgres?pgbouncer=true&connection_limit=1
-DATABASE_URL="postgresql://postgres.qtcwetabhhkhvomcrqgm:SENHA_AQUI@aws-0-sa-east-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1"
+DATABASE_URL="postgresql://postgres.qtcwetabhhkhvomcrqgm:%23Bliss2711%40@aws-0-sa-east-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1"
 
-# Direta (Migrações - usa apenas em prisma migrate)
+# Direta (Migrações - usa apenas em prisma migrate - CRÍTICO!)
 # Formato: postgresql://postgres:SENHA@HOST:5432/postgres?sslmode=require
-DIRECT_URL="postgresql://postgres:SENHA_AQUI@db.qtcwetabhhkhvomcrqgm.supabase.co:5432/postgres?sslmode=require"
+DIRECT_URL="postgresql://postgres:%23Bliss2711%40@db.qtcwetabhhkhvomcrqgm.supabase.co:5432/postgres?sslmode=require"
 
 # IMPORTANTE: Se a senha tiver caracteres especiais, use URL encoding:
 # # → %23
