feat: atualizar para nova senha Hp3wvkaevss9oxhk gerada pelo Supabase

--- a/env.example
+++ b/env.example
@@ -2,8 +2,8 @@
 # DATABASE (Supabase PostgreSQL)
 # ========================================
 
-DATABASE_URL="postgresql://postgres.qtcwetabhhkhvomcrqgm:Bliss2711OLV@aws-0-sa-east-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1"
-DIRECT_URL="postgresql://postgres:Bliss2711OLV@db.qtcwetabhhkhvomcrqgm.supabase.co:5432/postgres?sslmode=require"
+DATABASE_URL="postgresql://postgres.qtcwetabhhkhvomcrqgm:Hp3wvkaevss9oxhk@aws-0-sa-east-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1"
+DIRECT_URL="postgresql://postgres:Hp3wvkaevss9oxhk@db.qtcwetabhhkhvomcrqgm.supabase.co:5432/postgres?sslmode=require"
 
 # ========================================
 # SUPABASE (Client)
