feat: adicionar rota de health check e atualizar configurações

--- a/env.example
+++ b/env.example
@@ -2,30 +2,30 @@
 # DATABASE (Supabase PostgreSQL)
 # ========================================
 
-DATABASE_URL="postgresql://postgres.qtcwetabhhkhvomcrqgm:Hp3wvkaevss9oxhk@aws-0-sa-east-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1"
-DIRECT_URL="postgresql://postgres:Hp3wvkaevss9oxhk@db.qtcwetabhhkhvomcrqgm.supabase.co:5432/postgres?sslmode=require"
+DATABASE_URL="postgresql://app_user:YOUR_PASSWORD@aws-0-REGION.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1"
+DIRECT_URL="postgresql://app_user:YOUR_PASSWORD@db.PROJECT_REF.supabase.co:5432/postgres?sslmode=require"
 
 # ========================================
 # SUPABASE (Client)
 # ========================================
 
-NEXT_PUBLIC_SUPABASE_URL="https://qtcwetabhhkhvomcrqgm.supabase.co"
-NEXT_PUBLIC_SUPABASE_ANON_KEY="sb_publishable_LuIL5CnnUcWqoce2qHtwDw_FHiFQ3fC"
-SUPABASE_SERVICE_ROLE_KEY="sb_secret_WlgrhchXiP4jYqMoETm9hw_RGxNJKH0"
+NEXT_PUBLIC_SUPABASE_URL="https://PROJECT_REF.supabase.co"
+NEXT_PUBLIC_SUPABASE_ANON_KEY="your-publishable-key"
+SUPABASE_SERVICE_ROLE_KEY="your-secret-key"
 
 # ========================================
 # NEXTAUTH (Autenticação)
 # ========================================
 
-NEXTAUTH_SECRET="olv-intelligence-secret-2025"
+NEXTAUTH_SECRET="your-secret-key"
 NEXTAUTH_URL="http://localhost:3000"
 
 # ========================================
 # APIs EXTERNAS
 # ========================================
 
-GOOGLE_CSE_ID="32dab0b4eba5a4d5b"
-GOOGLE_API_KEY="SUA_CHAVE_GOOGLE_AQUI"
-OPENAI_API_KEY="SUA_CHAVE_OPENAI_AQUI"
-HUNTER_API_KEY="SUA_CHAVE_HUNTER_AQUI"
-RECEITAWS_API_TOKEN="SUA_CHAVE_RECEITAWS_AQUI"
+GOOGLE_CSE_ID="your-cse-id"
+GOOGLE_API_KEY="your-google-api-key"
+OPENAI_API_KEY="your-openai-key"
+HUNTER_API_KEY="your-hunter-key"
+RECEITAWS_API_TOKEN="your-receitaws-token"
