--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lucide-react": "^0.451.0",
     "next": "15.0.2",
     "next-auth": "^5.0.0-beta.22",
+    "openai": "^6.5.0",
     "puppeteer": "^23.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
