OLV: Scheduled Re-Ingest + Monitoring System - Vercel Cron (6/6h) para reprocessamento automatico - POST /api/monitor/register: cadastro de empresas para monitoramento - GET/POST /api/cron/reingest: executor de lotes com concorrencia - lib/jobs/reingest.ts: engine com rate-limiting e backoff - Modelos Prisma: CompanyMonitor (queue) + IngestRun (logs) - Guia completo de monitoramento continuo - Fase 3.1 Background Jobs: 30% completa - Zero regressao, 100% aditivo

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
-  "regions": ["gru1"],
+  "regions": [
+    "gru1"
+  ],
   "functions": {
     "app/api/companies/search/route.ts": {
       "maxDuration": 5
@@ -15,6 +17,11 @@
     "env": {
       "PRISMA_GENERATE_SKIP_AUTOINSTALL": "false"
     }
-  }
+  },
+  "crons": [
+    {
+      "path": "/api/cron/reingest",
+      "schedule": "0 */6 * * *"
+    }
+  ]
 }
-
