--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.1",
     "@tanstack/react-table": "^8.20.5",
+    "@types/nodemailer": "^7.0.2",
     "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -41,6 +42,7 @@
     "lucide-react": "^0.451.0",
     "next": "15.0.2",
     "next-auth": "^5.0.0-beta.22",
+    "nodemailer": "^6.10.1",
     "openai": "^6.5.0",
     "puppeteer": "^23.5.0",
     "react": "^18.3.1",
