--- a/vercel.json
+++ b/vercel.json
@@ -22,6 +22,10 @@
     {
       "path": "/api/cron/reingest",
       "schedule": "0 */6 * * *"
+    },
+    {
+      "path": "/api/cron/alerts",
+      "schedule": "*/5 * * * *"
     }
   ]
 }
