--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "csv-parse": "^5.5.6",
     "lucide-react": "^0.451.0",
     "next": "15.0.2",
     "next-auth": "^5.0.0-beta.22",
